Not enough reflected glossy rays with non-progressive rendering? #33824

Closed
opened 2013-01-10 18:54:29 +01:00 by Sebastian Koenig · 3 comments

%%%--- Operating System, Graphics card ---
OSX 10.8.2, GT120

- Blender version with error, and version that worked ---

Always happened and still happens in r53712

- Short description of error ---

With non-progressive rendering, even with all the 5 extra sample settings set to 100 and overall AA samples set to 10, glossy rays in a reflective surface seem to use far too less samples.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the attached blendfile just press f12 and watch the marked area. With that amount of samples I would expect that reflection of the glass cube in the mirror cube to be far less noisy. Overall the recent commit for non-progressive rendering works wonders, but still, this behavior makes it almost useless in certain cases.
Why is that happening and is it possible to fix it?

%%%

%%%--- Operating System, Graphics card --- OSX 10.8.2, GT120 - Blender version with error, and version that worked --- Always happened and still happens in r53712 - Short description of error --- With non-progressive rendering, even with all the 5 extra sample settings set to 100 and overall AA samples set to 10, glossy rays in a reflective surface seem to use far too less samples. - Steps for others to reproduce the error (preferably based on attached .blend file) --- In the attached blendfile just press f12 and watch the marked area. With that amount of samples I would expect that reflection of the glass cube in the mirror cube to be far less noisy. Overall the recent commit for non-progressive rendering works wonders, but still, this behavior makes it almost useless in certain cases. Why is that happening and is it possible to fix it? %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report. There was a problem with the min/max bounce handling.%%%

%%%Fix in svn, thanks for the report. There was a problem with the min/max bounce handling.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33824
No description provided.