Fix #33824: cycles non-progressive render mode did not do correct path termination, leading to too much noise when the min bounce setting was lower than max bounce.